--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,4 +21,6 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-
+artifacts:
+  files:
+    - imageDetail.json
